--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout
         uses: DanySK/action-checkout@0.2.9
+      - run: ./gradlew build
 
   CI-Complete:
     needs: [ Build ]
